infra-aws/internet_gw.tf
#create internet gateway 
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.myvpc.id
  tags = {
    Name = "Internet Gateway"
  }
}
